src/static/styles/new.css
/* ... */
.about.hide .panel {
    transform: rotateX(-20deg);
}

.about .panel, .about .cables {
    transform: translate3d(0, 0, 0);
    transform-style: preserve-3d;
    backface-visibility: hidden;
    position: relative;
}

.about .cables {
    transform-origin: 50% -100%;
}

.about .panel {
    transform-origin: 50% 0%;
}

.about .center:before {
    border-left: 1px dashed rgba(29, 31, 39, 0.2);
    position: absolute;
    display: block;
    height: 100%;
    content: "";
    left: 5%;
    top: 0;
}

.about .center:after {
    border-radius: 0 0 6px 0;
    background-clip: padding-box;
    background: transparent url(../images/compass.png) 0 0 no-repeat;
    background-size: 224px 224px;
    position: absolute;
    display: block;
    height: 160px;
    width: 120px;
    opacity: 0.2;
    content: "";
    bottom: 0;
    right: 0;
}

.about .linkholder {
    background-clip: padding-box;
    background: transparent url(../images/map.png) 0 0 no-repeat;
    background-size: 60.5px 82.5px;
}

.about .panel header:before {
    border-radius: 6px 0 0 0;
    position: absolute;
    display: block;
    height: 150px;
    width: 110px;
    opacity: 0.8;
    content: "";
    left: 0;
    top: 0;
}

.about .panel h1 {
    font-size: 3.83333em;
    font-weight: 100;
    color: #d92400;
}

.about .panel h2 {
    font-size: 2em;
    font-weight: 100;
    color: #d92400;
}

.about .panel h1 .tabheading {
    color: #1d1f27;
}

.about .panel p {
    position: relative;
    z-index: 1;
}

.about .panel p strong {
    font-weight: 700;
    color: #1d1f27;
}

.about .linkholder .links {
    zoom: 1;
    box-shadow: 0 0 8px 4px rgba(0, 0, 0, 0.1);
    border-top: 1px solid rgba(0, 0, 0, 0.2);
    position: relative;
    z-index: 1;
}

.about .linkholder .links:after, .about .linkholder .links:before {
    display: table;
    content: "";
}

.about .linkholder .links:after {
    clear: both;
}

.about .linkholder .links li {
    box-sizing: border-box;
    display: block;
    float: left;
    width: 33.3%;
}

.about .linkholder .links li a {
    border-radius: 0 0 0 5px;
    background-clip: padding-box;
}

.about .linkholder .links li+li {
    border-left: 1px solid rgba(0, 0, 0, 0.2);
}

.about .linkholder .links li+li a {
    border-radius: 0 0 5px 0;
    background-clip: padding-box;
}

.about .linkholder .links a {
    font-size: 1.33333em;
    font-family: "Dosis", sans-serif;
    text-transform: uppercase;
    font-weight: 600;
    padding: 1em 0 1.1em;
    display: block;
}

.about .linkholder .links a.github:before, .about .linkholder .links a.download:before {
    content: "";
    font-family: "icons";
    text-transform: none;
    font-weight: normal;
    font-style: normal;
    line-height: 1em;
    font-size: 0.8em;
    margin-right: 0.5em;
    margin-left: -0.8em;
    position: relative;
    top: -1px;
}

.toggle {
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.6);
    margin: -28px;
    position: absolute;
    bottom: 12%;
    left: 50%;
}

.toggle-contact {
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.6);
    margin: -28px;
    position: absolute;
    bottom: 12%;
    left: 50%;
}

.fb-btn {
    left: 45%;
    background-color: #3b5998;
    color: white;
}

.fb-btn:hover {
    background-color: #fff;
    color: #555;
}

.youtube-btn {
    left: 50%;
    background-color: #d92400;
    color: white;
}

.youtube-btn:hover {
    background-color: #fff;
    color: #555;
}

.instagram-btn {
    background-color: black;
    left: 55%;
    color: white;
}

.instagram-btn:hover {
    background-color: #fff;
    color: #555;
}

.toggle.i .cross {
    transform: rotateZ(0deg);
}

.toggle.i .cross .x {
    margin-left: -2px;
    width: 4px;
    margin-top: -12px;
}

.toggle.i .cross .y {
    margin-top: -4px;
    height: 16px;
}

.cross {
    position: absolute;
    left: 50%;
    top: 50%;
}

.cross .x, .cross .y {
    border-radius: 2px;
    background-clip: padding-box;
    background-color: #1d1f27;
    height: 4px;
    width: 4px;
    margin: -2px;
    position: absolute;
    left: 0;
    top: 0;
}

.cross .x {
    margin-left: -12px;
    margin-top: -2px;
    width: 24px;
}

.cross .y {
    margin-top: -12px;
    height: 24px;
}

.cross {
    transform: rotateZ(45deg);
}

.cross, .x, .y {
    transition: all 0.3s cubic-bezier(0.165, 0.84, 0.44, 1);
}

.about .panel, .about .cables {
    transition: all 0.8s cubic-bezier(0.77, 0, 0.175, 1);
}

button:hover {
    background-color: #d92400;
    color: white;
}

.toggle:hover .x, .toggle:hover .y {
    background-color: white;
}

.links a:hover {
    background-color: #d92400;
    color: white;
}

#loaderswing {
    -webkit-perspective: 500px;
    -moz-perspective: 500px;
    -o-perspective: 500px;
    perspective: 500px;
    display: block;
    text-align: center;
    margin: auto;
    background: transparent;
    width: 22vw;
    height: auto;
    min-width: 150px;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    margin: auto;
    z-index: 0;
}

#loaderswing>img {
    position: relative;
    z-index: 1;
    width: 100%;
    display: block;
    color: #fff;
    text-decoration: none;
    text-align: center;
    font-size: 30px;
    top: 0px;
    z-index: 2;
    transform-origin: center top;
}

.loaderhoverslow {
    animation: swingslow 3s ease-in-out infinite;
}

@keyframes swingslow {
    0% {
        -webkit-transform: rotateX(-10deg);
        -moz-transform: rotateX(-10deg);
        -o-transform: rotateX(-10deg);
        -ms-transform: rotateX(-10deg);
        transform: rotateX(-10deg);
    }
    50% {
        -webkit-transform: rotateX(10deg);
        -moz-transform: rotateX(10deg);
        -o-transform: rotateX(10deg);
        -ms-transform: rotateX(10deg);
        transform: rotateX(10deg);
    }
    100% {
        -webkit-transform: rotateX(-10deg);
        -moz-transform: rotateX(-10deg);
        -o-transform: rotateX(-10deg);
        -ms-transform: rotateX(-10deg);
        transform: rotateX(-10deg);
    }
}
/* ... */

